@@ -1,4 +1,4 @@
 CacheDir/Old contains old tests of CacheDir which used the now removed
 SourceSignatures and TargetSignatures methods, preserved here for
-reference; the presence of an scontest.skip file means they are never
+reference; the presence of an sconstest.skip file means they are never
 executed.
