@@ -2,5 +2,5 @@ SourceCode.py is the "new" test for SourceCode making sure we
 get a NameError.
 
 The Old directory is the former tests from the deprecated state,
-preserved here for reference; the presence of an scontest.skip file
+preserved here for reference; the presence of an sconstest.skip file
 means they are never executed.
